--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/china"
-        android:label="福利"
+        android:label="给晖哥哥的福利"
         android:roundIcon="@drawable/china"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
